--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ form {
 
 input {
     width: 100%;
-    margin-top: 2px;
+    margin-top: 20px;
     padding: 10px;
     font-size: 16px;
 }
@@ -35,7 +35,7 @@ button {
     color: white;
     margin-top: 10px;
     cursor: pointer;
-    border-radius: 0.2rem;
+    border-radius: 2px;
 }
 
 label {
@@ -48,4 +48,13 @@ label {
     color: red;
     font-size: 0.9rem;
     margin-top: 2px;
+}
+
+.message {
+    background: rgb(241, 78, 3);
+    border: none;
+    padding: 1rem;
+    color: white;
+    margin: 10px;
+    border-radius: 2px;
 }
