--- a/css/styles.css
+++ b/css/styles.css
@@ -8,16 +8,34 @@ body {
     background: #ebebeb;
 }
 
+li a {
+    text-decoration: none;
+    padding: 4px;
+    color:rgb(11, 91, 133);
+    background-color: white;
+    border: 2px solid black;
+}
+
+
 .container {
     text-align: center;
     max-width: 760px;
     margin: 0 auto;
+    color:rgb(11, 91, 133);
+    background-color: white;
+    border: 2px solid black;
+}
+
+h1 {
+    color: black;
 }
 
 form {
-    padding: 2em;
+    margin: 20px;
+    padding: 5px;
     background: white;
-    border-radius: 1rem;
+   
+   
 }
 
 input {
@@ -25,6 +43,7 @@ input {
     margin-top: 20px;
     padding: 10px;
     font-size: 16px;
+    color:rgb(11, 91, 133) ;
 }
 
 button {
